--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "parcel": "^1.12.4",
     "purgecss": "^4.0.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.32.8",
     "scss": "^0.2.4"
   }
 }
