--- a/package.json
+++ b/package.json
@@ -1,42 +1,15 @@
 {
-  "name": "11ty-bootstrap5",
+  "name": "medik",
   "version": "1.0.0",
-  "description": "Minimal 11ty starter with Bootstrap 5 (beta1) and Parcel",
-  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development run-p watch:*",
-    "build": "cross-env NODE_ENV=production npm-run-all clean --parallel build:* --serial purgecss",
-    "build:eleventy": "eleventy",
-    "build:parcel": "parcel build parcel.js -d ./public/_assets -o main --public-url '/_assets' --no-source-maps",
-    "clean": "rimraf public/ .cache/",
-    "debug": "cross-env DEBUG=Eleventy* NODE_ENV=development run-s start",
-    "purgecss": "npx purgecss -c ./purgecss.config.js",
-    "watch:eleventy": "eleventy --serve",
-    "watch:parcel": "parcel watch parcel.js -d ./public/_assets -o main --public-url '/_assets'"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Thomas Hönig",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/THoenig/11ty-bs5-starter"
-  },
-  "bugs": {
-    "url": "https://github.com/THoenig/11ty-bs5-starter/issues"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
-    "@popperjs/core": "^2.6.0",
-    "bootstrap": "^5.0.0-beta1",
-    "cross-env": "^7.0.3",
-    "html-minifier": "^4.0.0",
-    "markdown-it": "^12.0.4",
-    "markdown-it-attrs": "^4.0.0",
-    "npm-run-all": "^4.1.5",
-    "parcel": "^1.12.4",
-    "purgecss": "^4.0.0",
-    "rimraf": "^3.0.2",
-    "sass": "^1.32.8",
-    "scss": "^0.2.4"
+    "@11ty/eleventy": "^0.11.1"
   }
 }
