--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,10 +12,19 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - { label: "Layout", name: "layout", widget: "hidden", default: "layouts/post.njk" }
+      - { label: "Layout", name: "layout", widget: "hidden", default: "layouts/base.njk" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "string" }
       - { label: "Date", name: "date", widget: "date", default: "" }
       - { label: "Post Body", name: "body", widget: "markdown" }
-      - { label: "Featured Image", name: "featuredImage", widget: "image" }
-      
+
+  - name: "parts"
+    label: "Parts"
+    folder: "parts"
+    create: true
+    fields:
+      - { label: "Layout", name: "layout", widget: "hidden", default: "layouts/base.njk" }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "ID", name: "id", widget: "string" }
+      - { label: "Tpye", name: "type", widget: "string" }
+      - { label: "Date", name: "date", widget: "date", default: "" }
+      - { label: "Body", name: "body", widget: "markdown" }
